--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -1,3 +1,20 @@
+@inproceedings{barone2017deep,
+    title = "Deep architectures for Neural Machine Translation",
+    author = "Miceli Barone, Antonio Valerio  and
+      Helcl, Jind{\v{r}}ich  and
+      Sennrich, Rico  and
+      Haddow, Barry  and
+      Birch, Alexandra",
+    booktitle = "Proceedings of the Second Conference on Machine Translation",
+    month = sep,
+    year = "2017",
+    address = "Copenhagen, Denmark",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/W17-4710",
+    doi = "10.18653/v1/W17-4710",
+    pages = "99--107",
+}
+
 
 @inproceedings{gu2017nonautoregressive,
   author    = {Jiatao Gu and
