--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -14,6 +14,8 @@ pohádka:
 
 \end{markdown}
 
+\JH{rewrite celý}
+
 It is universally agreed that context plays a vital role in human communication.
 
 % při rozhovoru je kontext kromě toho, co bylo řečeno i to, kde, kdo s kým a za
@@ -25,9 +27,18 @@ changes in translation quality. In the other case study, we go the other way: we
 limit the context available to the decoder and examine the model behavior.
 
 This thesis is structured as follows. In Chapter \ref{chap:nmt}, we describe the
-basics of \gls{nmt} as well as recent advancements in the field. Chapter
-\ref{chap:context} summarizes the scientific contributions exploring the
-influence of context in \gls{nmt} from different perspectives. We present two
-case studies focused on the importance of context in \gls{nmt} in Chapters
-\ref{chap:mmmt} and \ref{chap:nar}. The discussion of the results observed in
-the case studies is given in Chapter \ref{chap:discuss}.
+basics of \gls{nmt} as well as recent advancements in the field. % Chapter
+% \ref{chap:context} summarizes the scientific contributions exploring the
+% influence of context in \gls{nmt} from different perspectives. \JH{rewrite, NAT
+%   chapter: \ref{chap:nat}}
+%   We present two
+% case studies focused on the importance of context in \gls{nmt} in Chapters
+% \ref{chap:mmmt} and \ref{chap:nat}.
+%The discussion of the results observed in the case studies is given in Chapter
+%\ref{chap:discuss}.
+
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "thesis"
+%%% End:
