--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -9,8 +9,8 @@
 %\usepackage{filecontents}
 %\begin{filecontents*}{\jobname.xmpdata}
 %  \Author{Jindřich Helcl}
-%  \Title{On the Importance of Context in Neural Machine Translation}
-%  \Keywords{non-autoregressive neural machine translation, multimodal neural machine translation, neural machine translation, deep learning}
+%  \Title{Non-Autoregressive Neural Machine Translation}
+%  \Keywords{non-autoregressive neural machine translation, neural machine translation, deep learning}
 %  \Subject{TODO}
 %  \Publisher{Charles University}
 %\end{filecontents*}
@@ -54,8 +54,8 @@
 \usepackage{epstopdf}
 \usepackage{algorithmicx}
 \usepackage{algorithm}
-\usepackage{algpseudocode} 
- 
+\usepackage{algpseudocode}
+
 \usepackage[acronym]{glossaries}
 \usepackage[automake]{glossaries-extra}
 \preto\chapter{\glsresetall}
@@ -146,7 +146,7 @@ da-ta-set
 \def\JH#1{{\color{blue}JH: \it #1}}
 
 
-\title{On the Importance of Context in Neural Machine Translation}
+\title{Non-Autoregressive Neural Machine Translation}
 
 \def\fulldate{}
 \author{Jindřich Helcl}
@@ -211,8 +211,7 @@ I understand that my work relates to the rights and obligations
 
 \begin{description}[leftmargin=7.5em,labelwidth=7em,labelindent=0em,labelsep=0.5em]
         %
-\item[Keywords:] multimodal machine translation, neural machnie translation,
-    combining language and vision, deep learning
+\item[Keywords:] non-autoregressive neural machine translation, neural machine translation, deep learning
     %
 \end{description}
 
@@ -221,7 +220,7 @@ I understand that my work relates to the rights and obligations
 \addcontentsline{toc}{chapter}{Czech Abstract}
 \selectlanguage{czech}
 \begin{description}[leftmargin=7.5em,labelwidth=7em,labelindent=0em,labelsep=0.5em]
-\item[Název práce:] Význam kontextu v neuronovém strojovém překladu
+\item[Název práce:] Neautoregresivní neuronový strojový překlad
 \item[Autor:] \theauthor{}
 \item[Katedra:] Ústav formální a aplikované lingvistiky
 \item[Vedoucí práce:] \thesupervisor,\\ Ústav formální a aplikované lingvistiky
@@ -233,7 +232,7 @@ I understand that my work relates to the rights and obligations
 
 \begin{description}[leftmargin=7.5em,labelwidth=7em,labelindent=0em,labelsep=0.5em]
 %
-\item[Klíčová slova:] neautoregresivní strojový překlad, multimodální strojový překlad, neuronový strojový překlad, hluboké učení
+\item[Klíčová slova:] neautoregresivní strojový překlad, neuronový strojový překlad, hluboké učení
 %
 \end{description}
 
