--- a/thesis/acronyms.tex
+++ b/thesis/acronyms.tex
@@ -17,3 +17,5 @@
 \newacronym{bpe}{BPE}{byte-pair encoding}
 \newacronym{nat}{NAT}{Non-Autoregressive NMT}
 \newacronym{ctc}{CTC}{Connectionist Temporal Classification}
+\newacronym{npd}{NPD}{Noisy parallel decoding}
+\newacronym{bleu}{BLEU}{Bilingual evaluation understudy}
